@@ -1,3 +1,9 @@
+2013-12-18  Eric Wasylishen  <ewasylishen@gmail.com>
+
+	* Source/x11/XGServerWindow.m (-_createBuffer): Fix a big
+	memory leak noticed by Riccardo with the cairo backend,
+	by #ifdef-ing out this method when using cairo.
+
 2013-12-13  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/x11/XGDragView.m (-_xWindowAcceptingDnDDescendentOf:...):
